Replace rocket emojis with favicon.png in Header and Footer

--- a/crypto-react-app/src/components/Footer.css
+++ b/crypto-react-app/src/components/Footer.css
@@ -59,7 +59,9 @@
 }
 
 .logo-icon {
-  font-size: 2rem;
+  width: 32px;
+  height: 32px;
+  object-fit: contain;
   animation: rocket 3s infinite ease-in-out;
 }
 
